--- a/.github/workflows/check-update.yml
+++ b/.github/workflows/check-update.yml
@@ -1,8 +1,8 @@
 name: Check for updated OpenAPI specs
 on:
   schedule:
-    - cron: "27 3 * * 1-5"
-    - cron: "* * * * *"
+    - cron: "*/5 * * * *"
+    #- cron: "27 3 * * 1-5"
 
 jobs:
   build:
