--- a/.github/workflows/check-update.yml
+++ b/.github/workflows/check-update.yml
@@ -9,6 +9,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          ref: update-openapi
       - name: Prepare git
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -19,17 +21,11 @@ jobs:
         with:
           node-version: "20.x"
           registry-url: "https://registry.npmjs.org"
-      - name: Checkout update branch
-        run: |
-          git checkout main
-          git pull
-          git checkout -b update-openapi 2>/dev/null || git checkout update-openapi
-          git rebase main
       - name: Update OpenAPI
         id: update_openapi
         run: ./scripts/update.sh
       - name: create pull request
-        if: always()
+        if: steps.update_openapi.outcome == 'success' || steps.update_openapi.outcome == 'failure'
         id: create_pr
         run: |
           git push --set-upstream origin update-openapi
