--- a/.github/workflows/check-update.yml
+++ b/.github/workflows/check-update.yml
@@ -9,8 +9,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-        with:
-          ref: main
+        #with:
+        #  ref: main
       - name: Prepare git
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -25,7 +25,7 @@ jobs:
         run: |
           git fetch
           git switch update-openapi 2>/dev/null || git switch -c update-openapi
-          git rebase main
+        #  git rebase main
       - name: Update OpenAPI
         id: update_openapi
         run: ./scripts/update.sh
