--- a/.github/workflows/check-update.yml
+++ b/.github/workflows/check-update.yml
@@ -4,6 +4,10 @@ on:
   #- cron: "27 3 * * 1-5"
   workflow_dispatch:
 
+permissions:
+  contents: write
+  pull-requests: write
+
 jobs:
   build:
     runs-on: ubuntu-latest
