--- a/.github/workflows/merge-release.yml
+++ b/.github/workflows/merge-release.yml
@@ -2,17 +2,24 @@ name: Merge main into release branch
 on:
   release:
     types: [published]
+  workflow_dispatch:
+    inputs:
+      releaseBranchName:
+        description: "Branch to follow releases"
+        required: true
+        default: "release"
+        type: string
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: create pull request
-        id: create_pr
-        run: gh pr create --base release --head ${{ github.ref_name }} --title "[Automated] Merge ${{ github.ref_name }} into release" --body 'Created by Github action for release ${{ github.ref }}.'
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: Auto-merge release
-        run: gh pr merge --auto --squash "${{ github.ref_name }}"
-        env:
-          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+        with:
+          ref: ${{ github.ref}}
+      - name: Merge release into release branch
+        run: |
+          git fetch
+          git switch "${{inputs.releaseBranchName}}"
+          git merge --ff-only "${{ github.ref_name}}"
+          git push -f
