--- a/.github/workflows/check-update.yml
+++ b/.github/workflows/check-update.yml
@@ -52,7 +52,7 @@ jobs:
       - name: Auto-merge update
         if: steps.update_openapi.outcome == 'success' && steps.create_pr.outcome == 'success'
         run: |
-          gh pr merge --auto --squash --subject "feat!: update openapi.yaml" "${{ github.ref_name }}"
+          gh pr merge --auto --squash --subject "feat: update openapi.yaml" "${{ github.ref_name }}"
         env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
       - name: Comment on failed update
