--- a/.github/workflows/check-update.yml
+++ b/.github/workflows/check-update.yml
@@ -26,7 +26,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git config user.name "GitHub Actions Bot"
-          git config user.email "<>"
+          git config user.email 'bot@noreply.github.com'
       - uses: actions/setup-node@v4
         with:
           node-version: "20.x"
