--- a/.github/workflows/merge-release.yml
+++ b/.github/workflows/merge-release.yml
@@ -7,6 +7,7 @@ on:
       releaseBranchName:
         description: "Branch to follow releases"
         type: string
+        default: release
 
 permissions:
   contents: write
@@ -24,7 +25,7 @@ jobs:
       - name: Merge release into release branch
         run: |
           git fetch
-          git checkout "${{env.RELEASE_BRANCH_NAME}}"
+          git switch ${{env.RELEASE_BRANCH_NAME}} 2>/dev/null || git switch -c ${{env.RELEASE_BRANCH_NAME}}
           git status
           git merge --ff-only "${{ github.ref_name}}"
-          git push -f
+          git push --set-upstream
