--- a/.github/workflows/check-update.yml
+++ b/.github/workflows/check-update.yml
@@ -23,11 +23,9 @@ jobs:
         with:
           fetch-depth: 0
       - name: Prepare git
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          git config user.name "GitHub Actions Bot"
-          git config user.email 'bot@noreply.github.com'
+          git config user.name 'github-actions[bot]'
+          git config user.email 'github-actions[bot]@users.noreply.github.com'
       - uses: actions/setup-node@v4
         with:
           node-version: "20.x"
