--- a/.github/workflows/notify-sdk.yml
+++ b/.github/workflows/notify-sdk.yml
@@ -9,6 +9,10 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
   workflow_call:
+    secrets:
+      GH_TOKEN:
+        description: "GitHub Token"
+        required: true
 
 jobs:
   notify:
