--- a/.github/workflows/check-update.yml
+++ b/.github/workflows/check-update.yml
@@ -46,7 +46,7 @@ jobs:
           echo "count=$COMMITS" >> "$GITHUB_OUTPUT"
           echo "$COMMITS commits to merge"
       - name: create pull request
-        if: steps.count_commits.outputs.count > 0 && (steps.update_openapi.outcome == 'success' || steps.update_openapi.outcome == 'failure')
+        if: steps.count_commits.outputs.count > 0 || steps.update_openapi.outcome == 'failure'
         id: create_pr
         run: |
           git push --set-upstream -f origin ${{env.UPDATE_BRANCH_NAME}}
